--- a/index.html
+++ b/index.html
@@ -1,1 +1,61 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Just a Human</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
 
+  <!-- Section 1: Mission Directive -->
+  <section class="parallax" id="mission">
+    <div class="content">
+      <h1>Mission Directive</h1>
+      <p>A sovereign manifesto of quiet encouragement and anonymous advocacy.</p>
+    </div>
+  </section>
+
+  <!-- Section 2: The Wizard -->
+  <section class="parallax" id="wizard">
+    <div class="content">
+      <h1>The Wizard</h1>
+      <p>A poetic glimpse into the unseen architect of emotional dispatches—no name, just resonance.</p>
+    </div>
+  </section>
+
+  <!-- Section 3: Glimpses of Emerald City -->
+  <section class="parallax" id="glimpses">
+    <div class="content">
+      <h1>Glimpses of Emerald City</h1>
+      <p>Firefly-generated visuals with emotional captions—what it looks like, what it feels like.</p>
+    </div>
+  </section>
+
+  <!-- Section 4: Dispatch Philosophy -->
+  <section class="parallax" id="philosophy">
+    <div class="content">
+      <h1>Dispatch Philosophy</h1>
+      <p>Why stickers matter, why anonymity heals, why this mission sends what others won’t.</p>
+    </div>
+  </section>
+
+  <!-- Section 5: Cartographic Intentions -->
+  <section class="parallax" id="cartography">
+    <div class="content">
+      <h1>Cartographic Intentions</h1>
+      <p>A preview of regions to come—Western Slope now, San Juans next, Emerald City always.</p>
+    </div>
+  </section>
+
+  <!-- Section 6: Just a Human -->
+  <footer class="parallax" id="footer">
+    <div class="content">
+      <h1>Just a Human</h1>
+      <p>You don’t need to be known to be kind.</p>
+    </div>
+  </footer>
+
+  <script src="script.js"></script>
+</body>
+</html>
