--- a/index.html
+++ b/index.html
@@ -45,15 +45,25 @@
   <section class="parallax" id="cartography">
     <div class="content">
       <h1>Cartographic Intentions</h1>
-      <p>A preview of regions to come—Western Slope now, San Juans next, Emerald City always.</p>
+      <p>A preview of stickers sent around the nation.</p>
+      <a href="#" onclick="openGallery()">🖼️ View Sticker Design Gallery</a>
+
+<div id="galleryModal" class="modal">
+  <span onclick="closeGallery()" class="close">&times;</span>
+  <div class="modal-content">
+    <img src="assets/images/sticker1-thumb.png" alt="Design 1" />
+    <img src="assets/images/sticker1-thumb.png" alt="Design 2" />
+        <!-- Add more as needed -->
+  </div>
+</div>
     </div>
   </section>
 
   <!-- Section 6: Just a Human -->
   <footer class="parallax" id="footer">
     <div class="content">
-      <h1>Just a Human</h1>
-      <p>You don’t need to be known to be kind.</p>
+      <h1>Why "Just a Human?"</h1>
+      <p>You don’t need to be <strong><i>truly known</i></strong> to be kind.</p>
     </div>
   </footer>
 
