--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <section class="parallax" id="mission">
     <div class="content">
       <h1>Mission Directive</h1>
-      <p>A sovereign manifesto of quiet encouragement and anonymous advocacy.</p>
+      <p>This project exists to prove that kindness doesn’t need a spotlight. It’s a dispatch ministry built on emotional resonance, not recognition. Every sticker, every scroll, every whisper of encouragement is sent without expectation—just the belief that someone, somewhere, needed it.</p>
     </div>
   </section>
 
@@ -21,15 +21,16 @@
   <section class="parallax" id="wizard">
     <div class="content">
       <h1>The Wizard</h1>
-      <p>A poetic glimpse into the unseen architect of emotional dispatches—no name, just resonance.</p>
+      <p>You may call me "The Wizard" but only in jest, because I’m not here to be <i>known</i>. Rather, I exist here to be <i>felt</i>. I live with several mental health challenges, including experiences on the schizophrenia spectrum. <strong>My family?</strong> <i>Ceases to exist.</i> <strong> Friends?</strong> <i>What are those?</i> But that doesn’t make me broken. <i>It makes me "just a human."</i> This project is my quiet rebellion against stigma...a sort of living archive of cartographed empathy from someone who’s been told they shouldn’t have any at all. <strong>I do.</strong> And I’m sending it out in stickers to uplift others as a means to keep my cognitive functioning active, with the tenacious hope that it restores a little humility amongst a broken system built on deceit, corruption, and selfish world views along the way.</p>
     </div>
   </section>
 
   <!-- Section 3: Glimpses of Emerald City -->
   <section class="parallax" id="glimpses">
     <div class="content">
-      <h1>Glimpses of Emerald City</h1>
-      <p>Firefly-generated visuals with emotional captions—what it looks like, what it feels like.</p>
+      <h1>The Emerald City, OZ</h1>
+      <h2>Zip Code: 71025</h2>
+      <p>FThe Emerald City isn’t merely a place. It’s a state of being where peace thrives and malevolence dissolves. It’s mythic, yes. Misty, and sovereign all the way. These visuals are my interpretation of what emotional safety looks like—layered in green, wrapped in fog, and free of judgment.</p>
     </div>
   </section>
 
@@ -37,7 +38,7 @@
   <section class="parallax" id="philosophy">
     <div class="content">
       <h1>Dispatch Philosophy</h1>
-      <p>Why stickers matter, why anonymity heals, why this mission sends what others won’t.</p>
+      <p>Stickers are small, but they travel far. They’re anonymous acts of care—no return address, no ego. Just a message that says, “You were thought of.” This project is about sending encouragement without strings, and letting kindness be the only currency that matters.</p>
     </div>
   </section>
 
@@ -67,7 +68,8 @@
   <footer class="parallax" id="footer">
     <div class="content">
       <h1>Why "Just a Human?"</h1>
-      <p>You don’t need to be <strong><i>truly known</i></strong> to be kind.</p>
+      <h2>You don't need to be known to be kind.</h2>
+      <p>I’m not a brand. Neither am I a movement. I’m just a human—trying to prove that empathy can be scalable, even when it’s anonymous. This isn’t about being perfect as much as it is being present. And if you’ve ever felt unseen, this dispatch is for you.</p>
     </div>
   </footer>
 
