--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="content">
       <h1>The Emerald City, OZ</h1>
       <h2>Zip Code: 71025</h2>
-      <p>FThe Emerald City isn’t merely a place. It’s a state of being where peace thrives and malevolence dissolves. It’s mythic, yes. Misty, and sovereign all the way. These visuals are my interpretation of what emotional safety looks like—layered in green, wrapped in fog, and free of judgment.</p>
+      <p>The Emerald City isn’t merely a place. It’s a state of being where peace thrives and malevolence dissolves. It’s mythic, yes. Misty, and sovereign all the way. These visuals are my interpretation of what emotional safety looks like—layered in green, wrapped in fog, and free of judgment.</p>
     </div>
   </section>
 
