--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ function checkSerial() {
   if (serial >= 9000 && serial <= 9150) {
     window.location.href = "mesa-county.html";
   } else if (serial >= 9151 && serial <= 9301) {
-    window.location.href = "next-region.html"; // placeholder for future batch
+    window.location.href = "san-juan.html"; // placeholder for future batch
   } else {
     result = `<p>This sticker hasn't been dispatched yet. Double-check your serial number and try again...</p>`;
     document.getElementById("searchResult").innerHTML = result;
