--- a/mesa-county.html
+++ b/mesa-county.html
@@ -8,9 +8,11 @@
 <body>
   <section id="mesa-county">
   <div class="content">
+    <a href="index.html" class="back-button">← Return to Dispatch Search</a>
     <h1>Mesa County Dispatches</h1>
-    <p>Welcome, sticker recipient. Your dispatch belongs to the Mesa County batch (#9000–#9150).</p>
-    <p>Each sticker is a quiet act of encouragement, mapped to the Western Slope with dignity and intention.</p>
+    <h2>Welcome, sticker recipient. You've basically won the emotionally cartographed lottery in Mesa County.</h2>
+    <p>Each sticker is a quiet act of encouragement, mapped to the Western Slope with dignity and intention. I set out on a mission to deploy stickers that emotionally resonate with the ethos of Grand Junction and surrounding areas.</p>
+    <p>In fact, you may know me, "The Wizard" yet not fully realize it. I'm <i> that person</i> who waves at you from the sidewalk, usually dressed flagrantly and unapologetically authentically because I am the "unicorn tiger" of Mesa County. Nonbinary by choice, friendly and compassionate by nature. And if you've been around the grand valley long enough, well then heck, my mother probably prepared your taxes back in "the day."</i></p>
   </div>
 </section>
 </body>
