--- a/mesa-county.html
+++ b/mesa-county.html
@@ -14,6 +14,19 @@
     <p>Each sticker is a quiet act of encouragement, mapped to the Western Slope with dignity and intention. I set out on a mission to deploy stickers that emotionally resonate with the ethos of Grand Junction and surrounding areas.</p>
     <p>In fact, you may know me, "The Wizard" yet not fully realize it. I'm <i> that person</i> who waves at you from the sidewalk, usually dressed flagrantly and unapologetically authentically because I am the "unicorn tiger" of Mesa County. Nonbinary by choice, friendly and compassionate by nature. And if you've been around the grand valley long enough, well then heck, my mother probably prepared your taxes back in "the day."</i></p>
   </div>
+    <div class="video-container">
+  <iframe 
+    src="https://www.youtube.com/embed/GdZOqpRLvjc?rel=0&modestbranding=1&showinfo=0" 
+    title="I Stand - Idina Menzel" 
+    frameborder="0" 
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+    allowfullscreen>
+  </iframe>
+</div>
+    <div class="content">
+    <h2>This song mentioned in your dispatch letter? Grammy-worthy gold.</h2>
+    <p>This song resonates with me, because I'm the misunderstood type amongst Grand Junction. Often overlooked, but emotionally present and ready to know you. And I really do stand for the strange and lonely, because <i>I AM</i> the "strange and lonely," if you actually knew.</p>
+  </div>
 </section>
 </body>
 </html>
