--- a/test-scroll.html
+++ b/test-scroll.html
@@ -7,18 +7,20 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <section id="test-scroll">
+  <section id="mesa-county">
     <div class="content">
       <a href="index.html" class="back-button">← Return to Dispatch Search</a>
-      <h1>Harperville Test Scroll</h1>
-      <h2>This is a dummy dispatch page for layout testing and emotional debugging.</h2>
+      <h1>Mesa County Dispatches</h1>
+      <h2>Welcome, sticker recipient. You've basically won the emotionally cartographed lottery in Mesa County.</h2>
       <p>
         Each sticker is a quiet act of encouragement, mapped to the Western Slope with dignity and intention.
-        This scroll exists to test how embedded media, spacing, and styling behave across devices.
+        I set out on a mission to deploy stickers that emotionally resonate with the ethos of Grand Junction and surrounding areas.
       </p>
       <p>
-        You may know me as "The Wizard"—or maybe just the person in flannel who waves from the sidewalk.
-        This page is not for public dispatch—it’s for scroll-side calibration and sticker glyph rehearsal.
+        In fact, you may know me, "The Wizard" yet not fully realize it. I'm <i>that person</i> who waves at you from the sidewalk,
+        usually dressed flagrantly and unapologetically authentically because I am the "unicorn tiger" of Mesa County.
+        Nonbinary by choice, friendly and compassionate by nature. And if you've been around the Grand Valley long enough—
+        well then heck, my mother probably prepared your taxes back in "the day."
       </p>
     </div>
 
@@ -33,10 +35,11 @@
     </div>
 
     <div class="content">
-      <h2>Testing Emotional Resonance Embed</h2>
+      <h2>This song mentioned in your dispatch letter? Grammy-worthy gold.</h2>
       <p>
-        This song resonates with the misunderstood, the sticker senders, and the emotionally fluent.
-        If the video appears vertical or misaligned, this scroll will help us debug the layout and restore visual sovereignty.
+        This song resonates with me, because I'm the misunderstood type amongst Grand Junction.
+        Often overlooked, but emotionally present and ready to know you.
+        And I really do stand for the strange and lonely, because <i>I AM</i> the "strange and lonely," if you actually knew.
       </p>
     </div>
   </section>
