--- a/mesa-county.html
+++ b/mesa-county.html
@@ -7,8 +7,10 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <section id="mesa-county">
-    <div class="content">
+  <section class="region-background">
+  <div class="scroll-content">
+    <!-- dispatch blocks, video embed, sticker lore -->
+        <div class="content">
       <a href="index.html" class="back-button">← Return to Dispatch Search</a>
       <h1>Mesa County Dispatches</h1>
       <h2>Welcome, sticker recipient. You've basically won the emotionally cartographed lottery in Mesa County.</h2>
@@ -23,7 +25,7 @@
         well then heck, my mother probably prepared your taxes back in "the day."
       </p>
     </div>
-<br>
+
     <div class="video-container">
       <iframe 
         src="https://www.youtube.com/embed/d-kO8bH0QQ8?rel=0&modestbranding=1&showinfo=0" 
@@ -33,7 +35,7 @@
         allowfullscreen>
       </iframe>
     </div>
-<br>
+
     <div class="content">
       <h2>This song mentioned in your dispatch letter? Grammy-worthy gold.</h2>
       <p>
@@ -42,6 +44,8 @@
         And I really do stand for the strange and lonely, because <i>I AM</i> the "strange and lonely," if you actually knew.
       </p>
     </div>
-  </section>
+  </div>
+</section>
+  
 </body>
 </html>
