--- a/test-scroll.html
+++ b/test-scroll.html
@@ -44,6 +44,19 @@
         And I really do stand for the strange and lonely, because <i>I AM</i> the "strange and lonely," if you actually knew.
       </p>
     </div>
+
+    <div class="map-container">
+  <h2>Sticker Dispatch Radius</h2>
+  <p>This map shows the emotional terrain covered by this region’s sticker deployment.</p>
+  <iframe 
+    src="https://maps.app.goo.gl/PrJ9DouwjaxxnFZCA" 
+    width="100%" 
+    height="450" 
+    style="border:0;" 
+    allowfullscreen 
+    loading="lazy">
+  </iframe>
+</div>
   </div>
 </section>
   
