--- a/test-scroll.html
+++ b/test-scroll.html
@@ -45,18 +45,10 @@
       </p>
     </div>
 
-    <div class="map-container">
-  <h2>Sticker Dispatch Radius</h2>
-  <p>This map shows the emotional terrain covered by this region’s sticker deployment.</p>
-  <iframe 
-    src="https://maps.app.goo.gl/PrJ9DouwjaxxnFZCA" 
-    width="100%" 
-    height="450" 
-    style="border:0;" 
-    allowfullscreen 
-    loading="lazy">
-  </iframe>
-</div>
+     <div class="content">
+      <h1>Sticker Radius</h1>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d794539.9118089558!2d-108.87955390978182!3d38.93148455642981!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87462e01b88beebf%3A0xedd7334784655d34!2sMesa%20County%2C%20CO!5e0!3m2!1sen!2sus!4v1757931074031!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
   </div>
 </section>
   
