--- a/test-scroll.html
+++ b/test-scroll.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Harperville Test Scroll</title>
+  <title>San Juan Area Dispatches</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -12,24 +12,24 @@
     <!-- dispatch blocks, video embed, sticker lore -->
         <div class="content">
       <a href="index.html" class="back-button">← Return to Dispatch Search</a>
-      <h1>Mesa County Dispatches</h1>
-      <h2>Welcome, sticker recipient. You've basically won the emotionally cartographed lottery in Mesa County.</h2>
+      <h1>San Juan Area Dispatches</h1>
+      <h2>Welcome, sticker recipient. You've basically won the emotionally cartographed lottery in the San Juan Area of Colorado.</h2>
       <p>
-        Each sticker is a quiet act of encouragement, mapped to the Western Slope with dignity and intention.
-        I set out on a mission to deploy stickers that emotionally resonate with the ethos of Grand Junction and surrounding areas.
+        Each sticker is a quiet act of encouragement, mapped to the locales around the San Juan Mountains in all their splendor, but with dignity and intention.
+        I set out on a mission to deploy stickers that emotionally resonate with the ethos of who I am as a person, sharing my secret lore with the world around me.
       </p>
       <p>
-        In fact, you may know me, "The Wizard" yet not fully realize it. I'm <i>that person</i> who waves at you from the sidewalk,
-        usually dressed flagrantly and unapologetically authentically because I am the "unicorn tiger" of Mesa County.
-        Nonbinary by choice, friendly and compassionate by nature. And if you've been around the Grand Valley long enough—
-        well then heck, my mother probably prepared your taxes back in "the day."
+        I'd love it if you displayed your sticker in the bottom corner of your vehicle window, or somewhere visible to the general public,
+        so others can benefit from the ripple effect I'm hoping to provide. Also, on the page here below, there's a comment section. Feel free to leave an anonymous one,
+        or proudly display who's leaving kindness in return. Every act of kindness matters, and we're all appreciative of being seen, heard, and felt. <i>Keep comments
+        appropriate, of course.</i>
       </p>
     </div>
 
     <div class="video-container">
       <iframe 
-        src="https://www.youtube.com/embed/d-kO8bH0QQ8?rel=0&modestbranding=1&showinfo=0" 
-        title="I Stand - Idina Menzel" 
+        src="https://www.youtube.com/embed/RD0pRXSIfTmQI?rel=0&modestbranding=1&showinfo=0" 
+        title="Little Sparrow - Dolly Parton" 
         frameborder="0" 
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
         allowfullscreen>
@@ -39,17 +39,24 @@
     <div class="content">
       <h2>This song mentioned in your dispatch letter? Grammy-worthy gold.</h2>
       <p>
-        This song resonates with me, because I'm the misunderstood type amongst Grand Junction.
-        Often overlooked, but emotionally present and ready to know you.
-        And I really do stand for the strange and lonely, because <i>I AM</i> the "strange and lonely," if you actually knew.
+        This song resonates with me, because I'm the fragile, nonbinary soul who exists but often unseen, heard, and felt.
+        It's the perfect song to resonate with those of you on the San Juan front as it echoes the altitude through
+        bluegrass melancholy, with the ache each of you might sometimes feel. 
+        And the quiet strength of somebody who might be broken, yet flies above anyway.
       </p>
-    </div>
-
-     <div class="content">
+      <br>
       <h1>Sticker Radius</h1>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d794539.9118089558!2d-108.87955390978182!3d38.93148455642981!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87462e01b88beebf%3A0xedd7334784655d34!2sMesa%20County%2C%20CO!5e0!3m2!1sen!2sus!4v1757931074031!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <iframe src="<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d402541.8614191134!2d-108.04016457740353!3d37.98043625834137!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x873e097e1a2a1821%3A0x522abeaa5550122c!2sSan%20Juan%20Mountains!5e0!3m2!1sen!2sus!4v1758044284248!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>">
     </div>
     
+
+    <div class="comment-wrapper">
+    <h3 class="comment-title">Leave a Dispatch Echo</h3>   
+  <div class="commentbox"></div>
+</div>
+<script src="https://unpkg.com/commentbox.io/dist/commentBox.min.js"></script>
+<script>commentBox('5675117312999424-proj')</script>
+
   </div>
 </section>
   
