--- a/test-scroll.html
+++ b/test-scroll.html
@@ -37,7 +37,7 @@
     </div>
 
     <div class="content">
-      <h2>This song mentioned in your dispatch letter? Grammy-worthy gold.</h2>
+      <h2>This song mentioned in your dispatch letter? Dollywood Gospel!</h2>
       <p>
         This song resonates with me, because I'm the fragile, nonbinary soul who exists but often unseen, heard, and felt.
         It's the perfect song to resonate with those of you on the San Juan front as it echoes the altitude through
