--- a/san-juan.html
+++ b/san-juan.html
@@ -2,16 +2,62 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>San Juan Mountain Area Dispatches</title>
+  <title>San Juan Area Dispatches</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <section id="san-juan">
-  <div class="content">
-    <h1>San Juan Mountain Area Dispatches</h1>
-    <p>Welcome, sticker recipient. Your dispatch belongs to the San Juan batch.</p>
-    <p>Each sticker is a quiet act of encouragement, mapped to the Western Slope with dignity and intention.</p>
+  <section class="region-background">
+  <div class="scroll-content">
+    <!-- dispatch blocks, video embed, sticker lore -->
+        <div class="content">
+      <a href="index.html" class="back-button">← Return to Dispatch Search</a>
+      <h1>San Juan Area Dispatches</h1>
+      <h2>Welcome, sticker recipient. You've basically won the emotionally cartographed lottery in the San Juan Area of Colorado.</h2>
+      <p>
+        Each sticker is a quiet act of encouragement, mapped to the locales around the San Juan Mountains in all their splendor, but with dignity and intention.
+        I set out on a mission to deploy stickers that emotionally resonate with the ethos of who I am as a person, sharing my secret lore with the world around me.
+      </p>
+      <p>
+        I'd love it if you displayed your sticker in the bottom corner of your vehicle window, or somewhere visible to the general public,
+        so others can benefit from the ripple effect I'm hoping to provide. Also, on the page here below, there's a comment section. Feel free to leave an anonymous one,
+        or proudly display who's leaving kindness in return. Every act of kindness matters, and we're all appreciative of being seen, heard, and felt. <i>Keep comments
+        appropriate, of course.</i>
+      </p>
+    </div>
+
+    <div class="video-container">
+      <iframe 
+        src="https://www.youtube.com/embed/0pRXSIfTmQI?rel=0&modestbranding=1&showinfo=0" 
+        title="Little Sparrow - Dolly Parton" 
+        frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+        allowfullscreen>
+      </iframe>
+    </div>
+
+    <div class="content">
+      <h2>This song mentioned in your dispatch letter? Dollywood Gospel!</h2>
+      <p>
+        This song resonates with me, because I'm the fragile, nonbinary soul who exists but often unseen, heard, and felt.
+        It's the perfect song to resonate with those of you on the San Juan front as it echoes the altitude through
+        bluegrass melancholy, with the ache each of you might sometimes feel. 
+        And the quiet strength of somebody who might be broken, yet flies above anyway.
+      </p>
+      <br>
+      <h1>Sticker Radius</h1>
+<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d119757.88729068916!2d-107.89658961325111!3d37.93044642168386!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1758044474853!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>    </div>
+    
+
+    <div class="comment-wrapper">
+    <h3 class="comment-title">Leave a Dispatch Echo</h3>   
+  <div class="commentbox"></div>
+</div>
+<script src="https://unpkg.com/commentbox.io/dist/commentBox.min.js"></script>
+<script>commentBox('5675117312999424-proj')</script>
+
   </div>
 </section>
+  
 </body>
 </html>
