--- a/mesa-county.html
+++ b/mesa-county.html
@@ -24,6 +24,10 @@
         Nonbinary by choice, friendly and compassionate by nature. And if you've been around the Grand Valley long enough—
         well then heck, my mother probably prepared your taxes back in "the day."
       </p>
+      <p>I'd love it if you displayed your sticker in the bottom corner of your vehicle window, or somewhere visible to the general public,
+        so others can benefit from the ripple effect I'm hoping to provide. Also, on the page here below, there's a comment section. Feel free to leave an anonymous one,
+        or proudly display who's leaving kindness in return. Every act of kindness matters, and we're all appreciative of being seen, heard, and felt. <i>Keep comments
+        appropriate, of course.</i></p>    
     </div>
 
     <div class="video-container">
