--- a/mesa-county.html
+++ b/mesa-county.html
@@ -11,24 +11,27 @@
   <div class="scroll-content">
     <!-- dispatch blocks, video embed, sticker lore -->
         <div class="content">
-      <a href="index.html" class="back-button">← Return to Dispatch Search</a>
-      <h1>Mesa County Dispatches</h1>
-      <h2>Welcome, sticker recipient. You've basically won the emotionally cartographed lottery in Mesa County.</h2>
-      <p>
-        Each sticker is a quiet act of encouragement, mapped to the Western Slope with dignity and intention.
-        I set out on a mission to deploy stickers that emotionally resonate with the ethos of Grand Junction and surrounding areas.
-      </p>
-      <p>
-        In fact, you may know me, "The Wizard" yet not fully realize it. I'm <i>that person</i> who waves at you from the sidewalk,
-        usually dressed flagrantly and unapologetically authentically because I am the "unicorn tiger" of Mesa County.
-        Nonbinary by choice, friendly and compassionate by nature. And if you've been around the Grand Valley long enough—
-        well then heck, my mother probably prepared your taxes back in "the day."
-      </p>
-      <p>I'd love it if you displayed your sticker in the bottom corner of your vehicle window, or somewhere visible to the general public,
-        so others can benefit from the ripple effect I'm hoping to provide. Also, on the page here below, there's a comment section. Feel free to leave an anonymous one,
-        or proudly display who's leaving kindness in return. Every act of kindness matters, and we're all appreciative of being seen, heard, and felt. <i>Keep comments
-        appropriate, of course.</i></p>    
-    </div>
+  <a href="index.html" class="back-button">← Return to Dispatch Search</a>
+  <h1>Mesa County Dispatches</h1>
+  <h2>Welcome, sticker recipient. You've basically won the emotionally cartographed lottery in Mesa County, Colorado.</h2>
+
+  <img src="assets/images/sticker1-thumb.png" alt="Mesa County Sticker" class="sticker-thumb">
+
+  <p>
+    Each sticker is a quiet act of encouragement, mapped to the Western Slope with dignity and intention.
+    I set out on a mission to deploy stickers that emotionally resonate with the ethos of Grand Junction and surrounding areas.
+  </p>
+  <p>
+    In fact, you may know me, "The Wizard" yet not fully realize it. I'm <i>that person</i> who waves at you from the sidewalk,
+    usually dressed flagrantly and unapologetically authentically because I am the "unicorn tiger" of Mesa County.
+    Nonbinary by choice, friendly and compassionate by nature. And if you've been around the Grand Valley long enough—
+    well then heck, my mother probably prepared your taxes back in "the day."
+  </p>
+  <p>I'd love it if you displayed your sticker in the bottom corner of your vehicle window, or somewhere visible to the general public,
+    so others can benefit from the ripple effect I'm hoping to provide. Also, on the page here below, there's a comment section. Feel free to leave an anonymous one,
+    or proudly display who's leaving kindness in return. Every act of kindness matters, and we're all appreciative of being seen, heard, and felt. <i>Keep comments
+    appropriate, of course.</i></p>    
+</div>
 
     <div class="video-container">
       <iframe 
