--- a/san-juan.html
+++ b/san-juan.html
@@ -14,6 +14,7 @@
       <a href="index.html" class="back-button">← Return to Dispatch Search</a>
       <h1>San Juan Area Dispatches</h1>
       <h2>Welcome, sticker recipient. You've basically won the emotionally cartographed lottery in the San Juan Area of Colorado.</h2>
+          <img src="assets/images/sticker2-thumb.png" alt="San Juan, Colorado Sticker" class="sticker-thumb">
       <p>
         Each sticker is a quiet act of encouragement, mapped to the locales around the San Juan Mountains in all their splendor, but with dignity and intention.
         I set out on a mission to deploy stickers that emotionally resonate with the ethos of who I am as a person, sharing my secret lore with the world around me.
