--- a/test-index.html
+++ b/test-index.html
@@ -8,13 +8,13 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <section id="mission" class="parallax">
+    <!-- Section 0: Dispatch -->
+  <section id="dispatch" class="parallax">
   <div class="content">
     <h1>Have You Received a Dispatch?</h1>
     <p>Type the serial number from the back of the sticker to learn more.</p>
     <input type="text" id="serialInput" placeholder="Enter your sticker serial number">
-    <button onclick="routeSticker()">Track Dispatch</button>
-
+<button class="dispatch-button" onclick="routeSticker()">Track Dispatch</button>
   </div>
 </section>
   <!-- Section 1: Mission Directive -->
