--- a/test-index.html
+++ b/test-index.html
@@ -117,7 +117,9 @@
   const supabase = createClient('https://ekxhqzvhuvymrwsmhlqp.supabase.co', 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImVreGhxenZodXZ5bXJ3c21obHFwIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTgwNTQ3NjcsImV4cCI6MjA3MzYzMDc2N30.xtZCb5qtl9bGSPOreTVtTSdB_8sEYdGZOYnwrpX91M0')
 
   async function routeSticker() {
-    const serial = document.getElementById("serialInput").value.trim()
+    console.log("Raw input:", document.getElementById("serialInput").value)
+console.log("Trimmed input:", serial)
+console.log("Length:", serial.length)
     console.log("Searching for:", serial)
 
     const { data, error } = await supabase
@@ -126,6 +128,8 @@
       .eq('serial_number', serial)
       .single()
 
+const serial = 'A2B-8'
+    
     console.log("Returned data:", data)
     console.log("Returned error:", error)
 
